// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component renders a dismissible alert widget 1`] = `
<div class="px-4 rounded-md bg-opacity-10 bg-cherry py-2">
  <div class="flex items-center">
    <div class="flex-grow text-sm text-cherry-400 -mb-px">Alert of the type danger which is dismissible</div> <button href="#" type="button" class="inline-flex items-center font-medium transition-colors duration-300 ease-in-out rounded-sm z-btn focus:outline-none whitespace-nowrap flex-shrink-0 hover:bg-opacity-0 place-self-start text-cherry justify-center z-btn--cherry p-0 h-8 w-8 font-normal hover:bg-ink-200"><svg viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" fill="none" class="z-icon w-4 h-4 z-icon--x text-cherry">
        <line x1="18" y1="6" x2="6" y2="18"></line>
        <line x1="6" y1="6" x2="18" y2="18"></line>
      </svg> </button>
  </div>
</div>
`;

exports[`Alert component renders a dismissible alert widget with code snippet 1`] = `
<div class="px-4 rounded-md bg-opacity-10 bg-cherry py-2">
  <div class="flex items-center">
    <div class="flex-grow text-sm text-cherry-400 -mb-px">
      <div>
        <p> Alert of the type danger with code snippet </p> <button href="#" type="button" class="inline-flex items-center font-medium transition-colors duration-300 ease-in-out rounded-sm z-btn focus:outline-none whitespace-nowrap bg-cherry bg-opacity-40 text-vanilla-100 justify-center z-btn--vanilla-100 h-8 px-4 py-1 text-xs space-x-1 leading-loose font-normal hover:bg-ink-200">
          <!---->
          Default button
        </button>
      </div>
    </div> <button href="#" type="button" class="inline-flex items-center font-medium transition-colors duration-300 ease-in-out rounded-sm z-btn focus:outline-none whitespace-nowrap flex-shrink-0 hover:bg-opacity-0 place-self-start text-cherry justify-center z-btn--cherry p-0 h-8 w-8 font-normal hover:bg-ink-200"><svg viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" fill="none" class="z-icon w-4 h-4 z-icon--x text-cherry">
        <line x1="18" y1="6" x2="6" y2="18"></line>
        <line x1="6" y1="6" x2="18" y2="18"></line>
      </svg> </button>
  </div>
  <div class="z-code">
    <z-code content="<div class=" highlight"=""><pre><span class="ln">2</span>
<span class="ln">3</span>
<span class="ln">4</span><span class="nd">@dramatiq.actor</span>
<span class="hl"><span class="ln">5</span><span class="k">def</span> <span class="nf">example</span><span class="p">(</span><span class="p">)</span><span class="p">:</span></span><span class="ln">6</span>    <span class="k">pass</span>
</pre>" /&gt;</z-code>
  </div>
</div>
`;

exports[`Alert component renders a dismissible alert widget with controls 1`] = `
<div class="px-4 rounded-md bg-opacity-10 bg-cherry py-2">
  <div class="flex items-center">
    <div class="flex-grow text-sm text-cherry-400 -mb-px">
      <div class="hidden md:flex items-center justify-between mr-2">
        Alert of the type danger with controls
        <button href="#" type="button" class="inline-flex items-center font-medium transition-colors duration-300 ease-in-out rounded-sm z-btn focus:outline-none whitespace-nowrap bg-cherry bg-opacity-40 text-vanilla-100 justify-center z-btn--vanilla-100 h-8 px-4 py-1 text-xs space-x-1 leading-loose font-normal hover:bg-ink-200">
          <!---->
          Default button
        </button>
      </div>
    </div> <button href="#" type="button" class="inline-flex items-center font-medium transition-colors duration-300 ease-in-out rounded-sm z-btn focus:outline-none whitespace-nowrap flex-shrink-0 hover:bg-opacity-0 place-self-start text-cherry justify-center z-btn--cherry p-0 h-8 w-8 font-normal hover:bg-ink-200"><svg viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" fill="none" class="z-icon w-4 h-4 z-icon--x text-cherry">
        <line x1="18" y1="6" x2="6" y2="18"></line>
        <line x1="6" y1="6" x2="18" y2="18"></line>
      </svg> </button>
  </div>
</div>
`;

exports[`Alert component renders an alert widget with the given text 1`] = `
<div class="px-4 rounded-md bg-opacity-10 bg-cherry py-3.5">
  <div class="flex items-center">
    <div class="flex-grow text-sm text-cherry-400 -mb-px">Alert of the type danger</div>
    <!---->
  </div>
</div>
`;
